# nepali_date_numword

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
nepali_date_numword/: __init__.py  cli.py  constants.py  converter.py  date_converter.py  text_converter.py  utils.py
tests/: test_converter.py  test_date.py
